Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRetObject.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, Object> yoda
        Object ret = yoda:useForce(one, two)
        output "passed"
     end
end
