Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriObjBooleanRetBoolObjFail.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, Boolean> yoda
        integer wrongRet = yoda(one, two)
     end
end
